kubernetes_charts/cert-manager/examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - kuard.us3.qaexotel.in
    secretName: quickstart-example-tls
  rules:
  - host: kuard.us3.qaexotel.in
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
